--- a/AnalizeTweets/AnalizeTweets.csproj
+++ b/AnalizeTweets/AnalizeTweets.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="33.1.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.5-beta1" />
     </ItemGroup>
 
 </Project>
